--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
   "name": "demorepos",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "Demo Repository",
   "main": "main.js",
-  "dependencies": {
-    "diskdb": "^0.1.14",
-    "electron-packager": "^5.2.1",
-    "electron-prebuilt": "^0.37.2",
-    "electron-reload": "^0.2.0",
-    "electron-winstaller": "^2.0.5",
-    "jquery": "^2.2.2",
-    "octocat": "^0.11.0"
-  },
-  "devDependencies": {
-    "electron-squirrel-startup": "^1.0.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +10,8 @@
     "electron"
   ],
   "author": "GHLABS",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
+  }
 }
